--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,9 @@
-asgiref==3.2.5
-asn1crypto==1.3.0
-certifi==2020.4.5.1
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.1
-ConfigArgParse==1.2.1
-cryptography==2.8
 DingtalkChatbot==1.5.0
 Django==3.0.3
 djangorestframework==3.11.0
-Flask==1.1.2
-gevent==1.5a3
-geventhttpclient-wheels==1.3.1.dev2
-greenlet==0.4.15
-idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.2
 jsonpath==0.82
 locust==0.0
-locustio==0.14.5
-MarkupSafe==1.1.1
-msgpack==1.0.0
-psutil==5.7.0
-pycparser==2.20
 PyMySQL==0.9.3
-pyOpenSSL==19.1.0
-PySocks==1.7.1
-pytz==2019.3
-pyzmq==19.0.0
 requests==2.23.0
-six==1.14.0
-sqlparse==0.3.0
-urllib3==1.25.8
-Werkzeug==1.0.1
 xlrd==1.2.0
+pyecharts==1.7.1
